<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:paddingTop="24dp"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/toolbar">

        <android.support.v7.widget.AppCompatImageView
                android:src="@drawable/back_arrow"
                android:layout_width="50dp"
                android:padding="12dp"
                android:alpha=".25"
                android:layout_height="50dp"/>

        <android.support.v7.widget.AppCompatTextView
                android:text="@string/add_bmi_details"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginRight="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_personal_detail"
            android:textSize="30sp"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="40dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:id="@+id/appCompatTextView"/>

    <android.support.v7.widget.AppCompatEditText
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout"
            android:background="@drawable/et_round_corners"
            android:layout_width="match_parent"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"

            android:paddingRight="10dp"
            android:layout_height="50dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:text="@string/calculate_your_body_mass_index"
            android:layout_margin="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="@color/grayText"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/appCompatTextView2"/>


    <android.support.v7.widget.AppCompatTextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            android:id="@+id/appCompatTextView4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/appCompatTextView3"/>

    <android.support.v7.widget.AppCompatTextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            android:id="@+id/appCompatTextView3"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/appCompatTextView5"/>

    <android.support.v7.widget.AppCompatTextView
            android:text="@string/gender"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" android:id="@+id/appCompatTextView5"
            app:layout_constraintStart_toEndOf="@+id/appCompatTextView3" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            app:cardCornerRadius="4dp"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <NumberPicker
                    android:id="@+id/picker_weight"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/picker_height"/>

            <NumberPicker
                    android:id="@+id/picker_height"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/picker_weight"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/picker_gender"/>

            <NumberPicker
                    android:id="@+id/picker_gender"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/picker_height"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_and_gradient"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAllCaps="false"
            android:text="@string/calculate"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>