<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        tools:context=".fragments.MainFragment" android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:layout_marginRight="40dp"
            android:text="@string/enter_personal_detail"
            android:textSize="22sp"
            android:textColor="@color/textColor"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_weight="0"
                 android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
                android:id="@+id/tvUserName"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:layout_width="match_parent"
                android:background="@drawable/et_round_corners_gray"
                android:hint="@string/name"
                android:layout_gravity="center"
                android:lines="1"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textSize="14sp"
                android:paddingRight="20dp"/>
    </FrameLayout>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/calculate_your_body_mass_index"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/grayText"/>


    <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:id="@+id/appCompatTextView4"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:id="@+id/appCompatTextView3"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/height"
                android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/appCompatTextView5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp"
            android:elevation="4dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

            <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                <com.super_rabbit.wheel_picker.WheelPicker
                        android:id="@+id/picker_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:fadingEdge="vertical"
                        app:selectedTextColor="@color/gradientEnd"
                        android:layout_gravity="center"
                        app:textSize="16sp"
                        app:wheelItemCount="3"/>

                <View android:layout_marginTop="16dp"
                      android:layout_gravity="center"
                      android:background="@color/gradientEnd"
                      android:layout_width="50dp"
                      android:layout_height="3dp"/>

            </FrameLayout>

            <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                <com.super_rabbit.wheel_picker.WheelPicker
                        android:id="@+id/picker_height"
                        android:layout_height="100dp"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        app:selectedTextColor="@color/gradientEnd"
                        android:fadingEdge="vertical"
                        app:textSize="16sp"
                        app:wheelItemCount="3"/>

                <View android:layout_marginTop="16dp"
                      android:layout_gravity="center"
                      android:background="@color/gradientEnd"
                      android:layout_width="50dp"
                      android:layout_height="3dp"/>

            </FrameLayout>

            <FrameLayout
                    android:id="@+id/frameLayout3"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:minHeight="100dp"
                    android:layout_weight="1">

                <com.super_rabbit.wheel_picker.WheelPicker
                        android:id="@+id/picker_gender"
                        android:layout_gravity="center"
                        android:layout_height="100dp"
                        android:layout_width="wrap_content"
                        android:fadingEdge="vertical"
                        app:selectedTextColor="@color/gradientEnd"
                        app:textSize="16sp"
                        app:wheelItemCount="3"/>

                <View android:layout_marginTop="16dp"
                      android:layout_gravity="center"
                      android:background="@color/gradientEnd"
                      android:layout_width="50dp"
                      android:layout_height="3dp"/>

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/rounded_corners_and_gradient"
                android:textAllCaps="false"
                android:foreground="?attr/selectableItemBackground"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="@string/calculate"
                android:textColor="@android:color/white"/>
    </FrameLayout>

</LinearLayout>