<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="600dp"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        tools:context=".fragments.ResultFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_corners_and_gradient"
            android:layout_margin="60dp">

        <View android:id="@+id/separator1"
              android:layout_height="1dp"
              android:layout_width="match_parent"
              android:background="@android:color/white"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="32dp"
              android:alpha=".25"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/body_mass_index"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/separator1"
                app:layout_constraintBottom_toTopOf="@id/separator2"
                android:gravity="center"
                android:text="@string/body_mass_index"
                android:textColor="@android:color/white"
                android:alpha=".25"/>

        <View android:id="@+id/separator2"
              android:layout_height="1dp"
              android:layout_width="match_parent"
              android:background="@android:color/white"
              app:layout_constraintTop_toBottomOf="@id/body_mass_index"
              android:layout_marginTop="4dp"
              android:alpha=".25"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mass_index_whole_part"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="@id/separator2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mass_index_decimal_part"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:textSize="62sp"
                android:alpha=".75"
                android:textAlignment="textEnd"
                tools:text="18"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/mass_index_decimal_part"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/separator2"
                app:layout_constraintStart_toEndOf="@id/mass_index_whole_part"
                app:layout_constraintBottom_toBottomOf="@id/mass_index_whole_part"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:alpha=".75"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintVertical_bias="1.0"
                tools:text=".61"/>

        <View android:id="@+id/mass_index_devider"
              android:layout_height="2dp"
              android:background="@android:color/white"
              app:layout_constraintTop_toBottomOf="@id/mass_index_whole_part"
              android:layout_marginLeft="60dp"
              android:alpha=".70"
              android:layout_marginRight="60dp"
              android:layout_width="match_parent"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/result_message"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/mass_index_devider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:alpha=".90"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textAllCaps="true"
                tools:text="hello olivia, you are normal"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/bmi_info_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/result_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textSize="12sp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:alpha=".70"
                android:textColor="@android:color/white"
                android:text="@string/normal_bmi_range_18_5_kg_m2_25_kg_m2"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ponderal_index"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bmi_info_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textSize="12sp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:alpha=".70"
                android:textColor="@android:color/white"
                android:text="@string/ponderal_index_10_64_kg_m3"/>


        <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_share"
                android:layout_height="50dp"
                android:layout_width="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_rate"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/btn_share"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:scaleType="fitCenter"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_marginBottom="20dp"
                app:layout_constraintHorizontal_bias="0.5"/>

        <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/btn_rate"
                android:layout_height="50dp"
                android:layout_width="100dp"
                app:layout_constraintStart_toEndOf="@+id/btn_share"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/btn_rate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintHorizontal_bias="0.5"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>